--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                 ))
             }
             removeItem = (todo) => {
-                this.props.store.dispatch(handleDeleteTodo(todo))                        
+                this.props.dispatch(handleDeleteTodo(todo))                        
             }
             toggleItem = (id) => {
-                this.props.store.dispatch(handleToggle(id))
+                this.props.dispatch(handleToggle(id))
             }
             render() {
                 return(
@@ -268,17 +268,31 @@
             }
         }
 
+        class ConnectedTodos extends React.Component {
+            render() {
+                return(
+                    <Context.Consumer>
+                        {(store) => {
+                            const {todos} = store.getState()
+
+                            return <Todos todos={todos} dispatch={store.dispatch} />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
         class Goals extends React.Component {
             addGoal = (e) => {
                 e.preventDefault()
 
-                this.props.store.dispatch(handleAddGoal(
+                this.props.dispatch(handleAddGoal(
                     this.input.value,
                     () => this.input.value=''
                 ))
             }
             removeGoal = (goal) => {
-                this.props.store.dispatch(handleGoalRemove(goal))                
+                this.props.dispatch(handleGoalRemove(goal))                
             }
             render() {
                 return(
@@ -300,6 +314,20 @@
             }
         }
 
+        class ConnectedGoals extends React.Component {
+            render() {
+                return(
+                    <Context.Consumer>
+                        {(store) => {
+                            const {goals} = store.getState()
+
+                            return <Goals goals={goals} dispatch={store.dispatch} />
+                        }}
+                    </Context.Consumer>
+                )
+            }
+        }
+
         class App extends React.Component {
             componentDidMount () {
                 const {store} = this.props
@@ -309,23 +337,48 @@
                 store.subscribe(() => this.forceUpdate())
             }
             render() {
-                const { store } = this.props
-                const { todos, goals, loading } = store.getState()
+                const { loading }  = this.props.store.getState()
 
                 if (loading === true)  {
                     return <h3>Loading</h3>
                 }
                 return(
                     <div>
-                        <Todos todos={todos} store={store} />
-                        <Goals goals={goals} store={store} />
+                        <ConnectedTodos />
+                        <ConnectedGoals />
                     </div>
                 )
             }
         }
 
+        class ConnectedApp extends React.Component {
+            render() {
+                return(
+                    <Context.Consumer>
+                        {(store) => (
+                            <App store={store}/>                            
+                        )}
+                    </Context.Consumer>
+                )
+            }
+        }
+
+        const Context = React.createContext()
+
+        class Provider extends React.Component {
+            render() {
+                return(
+                    <Context.Provider value={this.props.store}>
+                        {this.props.children}
+                    </Context.Provider>
+                )
+            }
+        }
+
         ReactDOM.render(
-            <App store={store} />,
+            <Provider store={store}>
+                <ConnectedApp />
+            </Provider>,
             document.getElementById('app')
         )
     </script>
